--- a/web/app/assets/stylesheets/components/me-feed.scss
+++ b/web/app/assets/stylesheets/components/me-feed.scss
@@ -43,6 +43,8 @@ $mdc-layout-grid-columns: (
       font-size: 24px;
       color: $font-primary-color;
       font-family: $font-primary-family;
+      position: relative;
+      z-index: 3;
       @include mdc-layout-grid-media-query_("phone") {
         font-size: 24px;
         line-height: 1.2em;
