New feed with fixed float menu in mobile

--- a/web/app/assets/stylesheets/components/me-filter.scss
+++ b/web/app/assets/stylesheets/components/me-filter.scss
@@ -6,7 +6,7 @@
   user-select: none;
   @include mdc-layout-grid-media-query_("phone") {
     // width: calc(100vw - 24px);
-    width: 100vw;
+    //width: 100vw;
     margin: 0 0 3px 0;
   }
 
