--- a/web/app/assets/stylesheets/components/me-page.scss
+++ b/web/app/assets/stylesheets/components/me-page.scss
@@ -37,7 +37,7 @@
 
     @include mdc-layout-grid-media-query_("phone") {
       margin: 25px 0 0 0;
-      // padding-top: 45px;
+      padding: 0 0 0 60px;
     }
   }
 
