--- a/web/app/assets/stylesheets/components/me-top-app-bar.scss
+++ b/web/app/assets/stylesheets/components/me-top-app-bar.scss
@@ -109,9 +109,8 @@ $border-color: #e0e0e0;
       cursor: pointer;
       display: flex;
       align-items: center;
-      width: 60px;
-      margin: 0 0 0 (-$section-padding-phone);
-      padding: 0 0 0 $section-padding-phone;
+      margin: 2px 0 2px -10px;
+      color: $font-secondary-color;
     }
   }
 
