--- a/web/app/views/layouts/_app-top-bar.html.erb
+++ b/web/app/views/layouts/_app-top-bar.html.erb
@@ -44,10 +44,10 @@
       </section>
     <% end %>
     <% if params[:controller] != 'feeds' && mobile_device? %>
-      <span class="me-top-app-bar__back-button"
+      <button class="me-top-app-bar__back-button mdc-icon-button"
         onclick="window.history.back()">
         <i class="material-icons">keyboard_backspace</i>
-      </span>
+      </button>
     <% elsif params[:controller] != 'feeds' %>
     <section class="me-top-app-bar__section me-top-app-bar__section--left mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
       <a href="/">
