--- a/web/app/assets/stylesheets/_mixins.scss
+++ b/web/app/assets/stylesheets/_mixins.scss
@@ -1,22 +1,22 @@
-@mixin is-slide-left-animated() {
-  transition: opacity 0.6s ease, transform 0.6s ease;
+@mixin is-show-in-animated() {
+  transition: opacity 0.4s ease, transform 0.4s ease;
+  will-change: opacity, transform;
   &.is-animated {
     opacity: 0;
-    will-change: opacity, transform;
     @include mdc-layout-grid-media-query_("phone") {
 
     }
   }
 }
 
-@mixin is-slide-right-animated() {
-  transition: opacity 0.6s ease, transform 0.6s ease;
+@mixin is-open-up-animated() {
+  transition: opacity 0.4s ease, transform 0.4s ease;
+  will-change: opacity, transform;
   &.is-animated {
     opacity: 0;
     transform: translate(0, 85px);
-    will-change: opacity, transform;
     @include mdc-layout-grid-media-query_("phone") {
-      transform: translate(25vw, 0);
+      transform: translate(0, 25vh) scale(0.9);
     }
   }
 }
