Add highlight in price and date

--- a/web/app/assets/stylesheets/components/me-card.scss
+++ b/web/app/assets/stylesheets/components/me-card.scss
@@ -127,9 +127,9 @@ $description-color: $font-secondary-color;
     //color: $brand-color-left;
   }
 
-  &__date {
+  &__date, &__price {
 
-    &.is-today, .is-today a {
+    &.is-highlight, .is-highlight a {
       color: $brand-color;
     }
   }
