--- a/web/app/views/components/collection/_event.html.erb
+++ b/web/app/views/components/collection/_event.html.erb
@@ -22,7 +22,7 @@
        data-target="event.event"
        id="<%= dom_id event %>">
     <div class="mdc-card__media mdc-card__media--16-9" style="<%= get_image_style_attr event %>">
-    <!-- <div class="mdc-card__media mdc-card__media--16-9 lazy-bgimage hidden" data-src="<%#= event.image[:feed].url %>" style="<%#= get_image_style_attr event %>"> -->
+      <!-- <div class="mdc-card__media mdc-card__media--16-9 lazy-bgimage hidden" data-src="<%#= event.image[:feed].url %>" style="<%#= get_image_style_attr event %>"> -->
       <% if current_user %>
         <div class="me-card__like-button" data-action="click->event#like">
           <div data-target="event.like">
@@ -61,29 +61,18 @@
       <% end %>
     </div>
     <div class="me-card__primary-section">
-      <% if event.day_of_week['decorator'] == 'hoje' %>
-        <span class="me-card__date is-today"
-              data-target="event.date">
-          <%= event.day_of_week['decorator'] %> <%= format_hour event.first_day_time %>
-        </span>
-        <span> <%= " · R$#{event.details_prices.min}" if event.details_prices.present? %></span>
-        <span aria-hidden="true"> · </span>
-        <span class="me-card__category"
-              data-target="event.category">
+      <span class="me-card__category"
+          data-target="event.category">
           <%= event.categories_primary_name.try(:capitalize) %>
-        </span>
-      <% else %>
-        <span class="me-card__category"
-              data-target="event.category">
-          <%= event.categories_primary_name.try(:capitalize) %>
-        </span>
-        <span aria-hidden="true"> · </span>
-        <span class="me-card__date"
-              data-target="event.date">
-          <%= event.day_of_week['decorator'] %> <%= format_hour event.first_day_time %>
-        </span>
-        <span><%= " · R$#{event.details_prices.min}" if event.details_prices.present? %></span>
-      <% end %>
+      </span>
+      <span aria-hidden="true"> · </span>
+      <span class="me-card__date <%= 'is-highlight' if event.day_of_week['decorator'] == 'hoje' %>"
+            data-target="event.date">
+        <%= event.day_of_week['decorator'] %> <%= format_hour event.first_day_time %>
+      </span>
+      <span class="me-card__price <%='is-highlight' if (event.details_prices.present? && event.details_prices.min.to_i <= 20) %>">
+          <%= " · R$#{event.details_prices.min}" if event.details_prices.present? %>
+      </span>
     </div>
     <div class="me-card__secondary-section">
       <div class="me-card__title"
