--- a/web/app/assets/stylesheets/components/me-float-menu.scss
+++ b/web/app/assets/stylesheets/components/me-float-menu.scss
@@ -10,18 +10,15 @@
   color: $icon-color;
   user-select: none;
   height: max-content;
-  //background: $background-z1-color;
-  //box-shadow: $surface-z10-box-shadow;
-  //border-radius: 0 15px 15px 0;
 
   @include mdc-layout-grid-media-query_("phone") {
     top: 55px;
-    left: 0px;
+    left: 0;
     height: 100vh;
     width: 60px;
     background: #f7f7f7;
     touch-action: none;
-    box-shadow: inset 0 0 6px #ececec;
+    box-shadow: inset 0 0 6px #ececec, 1px 0 6px #ffffff85;
   }
 
   &__nav {
