--- a/web/app/views/layouts/welcome.html.erb
+++ b/web/app/views/layouts/welcome.html.erb
@@ -52,7 +52,7 @@
   </div>
 <% end %>
 
-<link href="https://fonts.googleapis.com/css?family=Montserrat:800,900|Roboto:400,500,700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Montserrat:800,900|Roboto:400,500,700&display=block" rel="stylesheet" lazyload>
 <%= javascript_include_tag 'welcome/application.js', defer: true %>
 <script src="https://apis.google.com/js/platform.js" defer></script>
 <!-- <script type='text/javascript' src='//platform-api.sharethis.com/js/sharethis.js#property=5d2f4bbe364d580011c349e5&product=inline-share-buttons' async='async'></script> -->
