Adjust images in welcome to work with lazyload

--- a/web/app/assets/stylesheets/welcome/application.scss
+++ b/web/app/assets/stylesheets/welcome/application.scss
@@ -467,7 +467,7 @@
 .skatista {
   width: 98px;
   height: 152px;
-  background-image: asset_url('welcome/skatista.png');
+  //background-image: asset_url('welcome/skatista.png');
   position: absolute;
   bottom: 35px;
   right: -100px;
