--- a/web/app/views/components/collection/_event.html.erb
+++ b/web/app/views/components/collection/_event.html.erb
@@ -21,7 +21,7 @@
        data-event-dominant-color="<%= get_image_dominant_color event %>"
        data-target="event.event"
        id="<%= dom_id event %>">
-    <div class="mdc-card__media mdc-card__media--16-9" style="<%= get_image_style_attr event %>">
+    <div class="mdc-card__media mdc-card__media--16-9 lazy-bgimage" data-src="<%= event.image[:feed].url %>" style="<%= get_image_style_attr event %>">
       <!-- <div class="mdc-card__media mdc-card__media--16-9 lazy-bgimage hidden" data-src="<%#= event.image[:feed].url %>" style="<%#= get_image_style_attr event %>"> -->
       <% if current_user %>
         <div class="me-card__like-button" data-action="click->event#like">
