--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -14,7 +14,7 @@
      data-event-modifier="single">
 
   <div class="me-card__head">
-    <div class="me-card__media" style="<%= get_image_style_attr @event %>">
+    <div class="me-card__media" style="<%= get_image_style_attr @event %>; background-image: url('<%= @event.image[:feed].url %>')">
       <% if current_user %>
       <div class="me-card__like-button" data-action="click->event#like">
         <div data-target="event.like">
