--- a/web/app/views/components/collection/_event.html.erb
+++ b/web/app/views/components/collection/_event.html.erb
@@ -18,6 +18,7 @@
        data-event-favorited="<%= current_user.taste_events_saved? event.id if current_user %>"
        data-event-identifier="<%= event.id %>"
        data-event-similar-open="<%= is_similar_open %>"
+       data-event-similar-loading="false"
        data-event-dominant-color="<%= get_image_dominant_color event %>"
        data-target="event.event"
        id="<%= dom_id event %>">
@@ -110,8 +111,11 @@
         <!--          <path d="M14 11L0 0H28L14 11Z"/>-->
         <!--        </svg>-->
 
-        <i class="material-icons">
+        <i class="me-card__expand-more material-icons">
           expand_more
+        </i>
+        <i class="me-card__loading material-icons">
+          refresh
         </i>
       </div>
     <% end %>
