Adjust fonts cache in service worker

--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
   <link rel="manifest" href="<%= asset_url 'manifest.json' %>"/>
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Montserrat:800,900|Roboto:300,400,500,700|Material+Icons|Material+Icons+Round|Material+Icons+Sharp">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Montserrat:800,900|Roboto:300,400,500,700|Material+Icons|Material+Icons+Round|Material+Icons+Sharp&display=swap">
 
   <%= Gon::Base.render_data %>
 
