--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
   </section>
 <% else %>
   <%= render partial: "layouts/app-top-bar" %>
-  <section class="me-page me-page--profile__section">
+  <section class="me-page me-page--profile__section is-animated">
     <%#= render partial: 'layouts/bot' %>
 <!--    <div class="me-overlay"></div>-->
     <%= yield %>
