--- a/web/app/assets/stylesheets/components/me-page.scss
+++ b/web/app/assets/stylesheets/components/me-page.scss
@@ -1,6 +1,11 @@
 @import "variables";
 
 .me-page {
+  --mdc-layout-grid-margin-phone: 0;
+  --mdc-layout-grid-gutter-phone: 0 16px;
+  --mdc-layout-grid-margin-desktop: 0;
+  --mdc-layout-grid-gutter-desktop: 25px 16px;
+
   color: $font-primary-color;
   @include is-show-in-animated;
   @include mdc-layout-grid-media-query_("phone") {
@@ -63,14 +68,24 @@
     }
   }
 
-  &--profile-section {
+  &--profile__section {
+    padding: 24px 0 0 0;
+    @include is-open-up-animated;
     @include mdc-layout-grid-media-query_("phone") {
-      padding: 24px;
+      padding: 6px 0 0 0;
     }
 
-    & .me-feed__section {
-      @include mdc-layout-grid-media-query_("phone") {
-        padding: 6px 0 35px 0;
+    @include mdc-layout-grid-media-query_("phone") {
+      & .mdc-layout-grid {
+        padding: 0 24px;
+      }
+
+      & .me-feed__section {
+        padding: 0;
+      }
+
+      & .me-card--feed {
+        margin: 0 0 34px 0;
       }
     }
   }
