--- a/web/app/views/components/collection/_collection.html.erb
+++ b/web/app/views/components/collection/_collection.html.erb
@@ -78,7 +78,8 @@
 
         <%= render partial: 'components/collection/similar', locals: {
             events:     items[:events],
-            identifier: identifier
+            identifier: identifier,
+            json_request: json_request
         } unless mobile_device? %>
 
         <%# if events_in_collection < 4 %>
